@@ -1,3 +1,5 @@
+######## 2014-9-12 ##########
+create unique index owner_openid_id on shop_weixin_vipcode(owner_openid_id);
 ######## 2014-9-6 ##########
 alter table shop_weixin_user add column user_group_id int(11);
 ALTER TABLE shop_weixin_user ADD CONSTRAINT fk_user_group FOREIGN KEY (user_group_id) REFERENCES shop_weixin_group (id);
